--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ h1 {
   letter-spacing: 3px;
   font-weight: 400;
 }
-
+img { max-width: 80%; }
 header {
   background: #3F51B5;
   color: #FFFFFF;
