--- a/scss/style.scss
+++ b/scss/style.scss
@@ -286,3 +286,8 @@ blockquote {
 	}
 	
 }
+img { max-width: 100%;
+      margin-top: 10px;}
+.timeline-img-header { background: #3F51B5;
+                       
+                     }
