--- a/scss/style.scss
+++ b/scss/style.scss
@@ -289,5 +289,6 @@ blockquote {
 img { max-width: 100%;
       margin-top: 10px;}
 .timeline-img-header { background: #3F51B5;
-                       
-                     }
+                       padding-top: 40px;
+                       img { margin-bottom: 20px; max-height: 50%;}
+             }
