--- a/index.mustache
+++ b/index.mustache
@@ -34,7 +34,7 @@
         <div class="timeline-content timeline-card">
         <div class="timeline-img-header">
           <h2>{{{ title }}}</h2>
-          <img src="./images/{{{ type }}}.png"/>
+          <img src="./images/{{ pict }}"/>
         </div>
         <div class="date">{{{ date }}}</div>
           <p>{{{ desc }}}</p>
