--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
   font-family: 'Roboto';
   font-size: 17px;
   font-weight: 400;
-  background-color: #eee; }
+  background-color: #ddd; }
 
 h1 {
   font-size: 200%;
