--- a/index.mustache
+++ b/index.mustache
@@ -30,6 +30,7 @@
       {{#events}}
 
       <div class="timeline-item">
+        <div class="timeline-img"></div>
         <div class="timeline-content">
           <img src="./images/{{ pict }}" width="60%"/>
           <h2>{{{ title }}}</h2>
