Move logos to corner of each card

--- a/index.mustache
+++ b/index.mustache
@@ -32,7 +32,7 @@
       <div class="timeline-item">
         <div class="timeline-img"></div>
         <div class="timeline-content">
-          <img src="./images/{{ pict }}" width="60%"/>
+          <img class="logo" src="./images/{{ pict }}" />
           <h2>{{{ title }}}</h2>
           <div class="date">{{{ date }}}</div>
           <p>{{{ desc }}}</p>
