--- a/css/style.css
+++ b/css/style.css
@@ -9,18 +9,17 @@ body {
   font-family: 'Roboto';
   font-size: 17px;
   font-weight: 400;
-  background-color: #eee; }
+  background-color: #ddd; }
 
 h1 {
   font-size: 200%;
-  text-transform: uppercase;
   letter-spacing: 3px;
   font-weight: 400; }
 
 header {
   background: #3f51b5;
   color: #ffffff;
-  padding: 150px 0; }
+  padding: 50px 0; }
   header p {
     font-family: 'Allura';
     color: rgba(255, 255, 255, 0.2);
