--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,10 @@ h1 {
   letter-spacing: 3px;
   font-weight: 400; }
 
+h2 {
+  font-size: 25px;
+}
+
 header {
   background: #3f51b5;
   color: #ffffff;
@@ -40,7 +44,7 @@ header {
 
 .timeline-item {
   width: 100%;
-  margin-bottom: 70px; }
+  margin-bottom: 20px; }
   .timeline-item:nth-child(even) .timeline-content {
     float: right; }
     .timeline-item:nth-child(even) .timeline-content .date {
