Add link to submit event

--- a/index.mustache
+++ b/index.mustache
@@ -17,6 +17,9 @@
 </head>
 
 <body>
+  <menu>
+    <a href="https://github.com/lucj/sophia.events/issues/new">Submit an event (via GitHub)</a>  
+  </menu>
   <header>
     <div class="container text-center">
       <h1>Technical events in #SophiaAntipolis</h1>
