--- a/css/style.css
+++ b/css/style.css
@@ -20,16 +20,24 @@ h2 {
   font-size: 25px;
 }
 
+menu {
+  background: #3f51b5;
+  margin: 0;
+}
+
 header {
   background: #3f51b5;
   color: #ffffff;
-  padding: 50px 0; }
-  header p {
-    font-family: 'Allura';
-    color: rgba(255, 255, 255, 0.2);
-    margin-bottom: 0;
-    font-size: 60px;
-    margin-top: -30px; }
+  padding: 0px 0;
+}
+
+header p {
+  font-family: 'Allura';
+  color: rgba(255, 255, 255, 0.2);
+  margin-bottom: 0;
+  font-size: 60px;
+  margin-top: -30px;
+}
 
 .timeline {
   position: relative; }
