--- a/www/index.mustache
+++ b/www/index.mustache
@@ -35,7 +35,9 @@
       <div class="timeline-item">
         <div class="timeline-img"></div>
         <div class="timeline-content">
+          {{#pict}}
           <img class="logo" src="./images/{{ pict }}" />
+          {{/pict}}
           <h2>{{{ title }}}</h2>
           <div class="date">{{{ date }}}</div>
           <p>{{{ desc }}}</p>
