--- a/www/index.mustache
+++ b/www/index.mustache
@@ -18,8 +18,13 @@
 
 <body>
   <menu>
-    <a href="https://github.com/lucj/sophia.events/issues/new">Submit an event (via GitHub)</a>  
+    <ul id="nav">
+      <li><a href="./index.html">Upcoming</a></li>
+      <li><a href="./past.html">Past</a></li>
+      <li><a href="https://github.com/lucj/sophia.events/issues/new" target="_blank">Submit an event (via GitHub)</a></li>
+    </ul> 
   </menu>
+
   <header>
     <div class="container text-center">
       <h1>Technical events in #SophiaAntipolis</h1>
