--- a/template/index.mustache
+++ b/template/index.mustache
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self';script-src www.googletagmanager.com 'unsafe-inline';style-src fonts.googleapis.com maxcdn.bootstrapcdn.com 'self'">
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113065209-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
