--- a/template/index.mustache
+++ b/template/index.mustache
@@ -61,7 +61,7 @@
   </section>
   <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
   <script src='https://cdn.jsdelivr.net/scrollreveal.js/3.3.1/scrollreveal.min.js'></script>
-  <!-- <script src="js/index.js"></script> //-->
+  <script src="js/index.js"></script>
 
 </body>
 </html>
