Move Google Analytics in own file (for CSP header)

--- a/template/index.mustache
+++ b/template/index.mustache
@@ -1,14 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src https://code.jquery.com https://cdn.jsdelivr.net https://www.google-analytics.com https://www.googletagmanager.com 'unsafe-inline' 'self'; style-src https://fonts.googleapis.com https://maxcdn.bootstrapcdn.com 'self'; font-src https://fonts.gstatic.com https://maxcdn.bootstrapcdn.com https://fonts.googleapis.com; object-src 'none'">
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113065209-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'UA-113065209-1');
-  </script>
+  <script src="js/ga.js"></script>
   <meta charset="UTF-8">
   <title>TechEvents@Sophia</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:100i,300,400,500,700" rel="stylesheet">
