Open link in new tab

--- a/template/index.mustache
+++ b/template/index.mustache
@@ -42,7 +42,7 @@
           <div class="date">{{{ date }}}</div>
           <p>{{{ desc }}}</p>
           {{#link}}
-            <a class="bnt-more" href="{{{ link }}}">More</a>
+            <a class="bnt-more" target="_blank" href="{{{ link }}}">More</a>
           {{/link}}
           {{^link}}
             <a class="bnt-more" href="javascript:void(0);">A venir...</a>
