Small updates of the style

--- a/template/index.mustache
+++ b/template/index.mustache
@@ -14,8 +14,8 @@
 <body>
   <menu>
     <ul id="nav">
-      <li><a href="./index.html">Upcoming</a></li>
-      <li><a href="./past.html">Past</a></li>
+      <li><a href="./index.html">Upcoming events</a></li>
+      <li><a href="./past.html">Past events</a></li>
       <li><a href="https://github.com/lucj/sophia.events/issues/new" target="_blank">Submit an event (via GitHub)</a></li>
     </ul> 
   </menu>
@@ -23,7 +23,6 @@
   <header>
     <div class="container text-center">
       <h1>Technical events in #SophiaAntipolis</h1>
-      <p>...in one single place</p>
     </div>
   </header>
 
@@ -45,7 +44,7 @@
             <a class="bnt-more" target="_blank" href="{{{ link }}}">More</a>
           {{/link}}
           {{^link}}
-            <a class="bnt-more" href="javascript:void(0);">A venir...</a>
+            <a class="bnt-more" href="javascript:void(0);">More info soon...</a>
           {{/link}}
         </div>
       </div>   
