--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,5 +1,5 @@
 section {
-  padding: 100px 0; }
+  padding: 50px 0; }
 
 html,
 body {
@@ -7,13 +7,13 @@ body {
 
 body {
   font-family: 'Roboto';
-  font-size: 17px;
-  font-weight: 400;
-  background-color: #ddd; }
+  font-size: 15px;
+  font-weight: 300;
+  background-color: #dfdfdf; }
 
 h1 {
   font-size: 200%;
-  letter-spacing: 3px;
+  letter-spacing: 1px;
   font-weight: 400; }
 
 h2 {
@@ -21,10 +21,8 @@ h2 {
 }
 
 header {
-  background: #3f51b5;
-  color: #ffffff;
-  padding: 10px 0;
-  padding-top: 30px;
+  padding: 0 0;
+  padding-top: 50px;
 }
 
 header p {
@@ -90,6 +88,11 @@ header p {
     border-width: 10px 0 10px 15px;
     border-color: transparent transparent transparent #f5f5f5; }
 
+.bnt-more {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
 .logo {
   position: absolute;
   top: 0;
@@ -98,20 +101,20 @@ header p {
   width: auto; }
 
 .timeline-img {
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
   background: #3f51b5;
   border-radius: 50%;
   position: absolute;
   left: 50%;
-  margin-top: 25px;
-  margin-left: -15px; }
+  margin-top: 30px;
+  margin-left: -10px; }
 
 a {
   background: #3f51b5;
   color: #ffffff;
   padding: 8px 20px;
-  text-transform: uppercase;
+  /*text-transform: uppercase;*/
   font-size: 14px;
   margin-bottom: 20px;
   margin-top: 10px;
@@ -190,6 +193,6 @@ ul#nav li a {
   line-height: 40px;
   color: #fff;
   text-decoration: none;
-  margin: 0;
+  margin: 0 5px;
   padding: 0 30px;
 }
