Use png for location logos

--- a/template/index.mustache
+++ b/template/index.mustache
@@ -40,7 +40,7 @@
           <div class="secondary-info">
             <div class="date">{{{ date }}}</div>
             {{#location}}
-            <img class="logo-location" src="./images/{{ location }}" />
+            <img class="logo-location" src="./images/{{ location }}.png" />
             {{/location}}
           </div>
 
